update for uliweb3

--- a/zh_CN/index.html
+++ b/zh_CN/index.html
@@ -142,13 +142,9 @@ $(function(){
 <h2 id="title_0-2">教程<a class="anchor" href="#title_0-2">&para;</a></h2>
 <div class="toc">
 <ul>
-<li><a href="hello_uliweb.html">Hello, Uliweb</a></li><li><a href="basic.html">Simple Todo (Uliweb 版本) 之 基础篇</a></li><li><a href="plugs_todo.html">Simple Todo (Uliweb 版本) 之 高级篇</a></li><li><a href="guestbook.html">迷你留言板</a></li></ul>
+<li><a href="tutorial/hello_uliweb.html">Hello, Uliweb</a></li><li><a href="tutorial/todo_basic.html">Simple Todo (Uliweb 版本) 之 基础篇</a></li><li><a href="tutorial/todo_apijson.html">Simple Todo (Uliweb 版本) 之 高级篇</a></li><li><a href="tutorial/guestbook.html">迷你留言板</a></li></ul>
 </div>
-<ul>
-<li><a class="outter" href="http://uliweb.clkg.org/tutorial/read/22">uliweb入门教程基础版本</a></li>
-<li><a class="outter" href="http://uliweb.clkg.org/tutorial/read/3">uliweb入门教程--blog(1天体验版本)</a></li>
-<li><a class="outter" href="http://uliweb.clkg.org/tutorial/read/19">uliweb中级篇--CMS</a></li>
-</ul>
+
 <h2 id="title_0-3">多人博客教程<a class="anchor" href="#title_0-3">&para;</a></h2>
 <div class="toc">
 <ul>
