--- a/zh_CN/whouse.html
+++ b/zh_CN/whouse.html
@@ -144,6 +144,16 @@ $(function(){
 <li><a class="outter" href="https://github.com/zhangchunlin/shapps">https://github.com/zhangchunlin/shapps</a> (app collections)</li>
 <li><a class="outter" href="https://github.com/Longwosion/uliweb-redbreast">https://github.com/Longwosion/uliweb-redbreast</a> (workflow engine)</li>
 </ul>
+<h2 id="title_1-3">uliweb-apps 相关项目<a class="anchor" href="#title_1-3">&para;</a></h2>
+<ul>
+<li><a class="outter" href="https://github.com/uliwebext/uliweb-ui">https://github.com/uliwebext/uliweb-ui</a></li>
+<li><a class="outter" href="https://github.com/uliwebext/uliweb-layout">https://github.com/uliwebext/uliweb-layout</a></li>
+<li><a class="outter" href="https://github.com/uliwebext/uliweb-menu">https://github.com/uliwebext/uliweb-menu</a></li>
+<li><a class="outter" href="https://github.com/limodou/uliweb-apps">https://github.com/limodou/uliweb-apps</a></li>
+<li><a class="outter" href="https://github.com/zhangchunlin/uliweb-comapps">https://github.com/zhangchunlin/uliweb-comapps</a></li>
+<li><a class="outter" href="https://github.com/zhangchunlin/uliweb-comui">https://github.com/zhangchunlin/uliweb-comui</a></li>
+<li><a class="outter" href="https://github.com/zhangchunlin/uliweb-apijson">https://github.com/zhangchunlin/uliweb-apijson</a></li>
+</ul>
 
 
       <div class="chapter-prev chapter-down pull-left">
