--- a/zh_CN/introduction.html
+++ b/zh_CN/introduction.html
@@ -130,7 +130,7 @@ $(function(){
       <h1 id="title_1">Uliweb 简介<a class="anchor" href="#title_1">&para;</a></h1>
 <h2 id="title_1-1">它是什么<a class="anchor" href="#title_1-1">&para;</a></h2>
 <p>Uliweb是一个全栈式的Python Web Framework，它有三个主要设计目标：可重用性，可配 置性和可替换性。所有的功能都是围绕着这些目标。</p>
-<p>这个项目是由Limodou <a class="inner" href="&#x6D;&#x61;ilt&#x6F;:&#x6C;i&#x6D;o&#x64;&#x6F;u@&#x67;&#x6D;&#x61;&#x69;&#x6C;.com">&#x6C;im&#x6F;do&#x75;&#x40;&#x67;m&#x61;il&#x2E;&#x63;om</a>发起并创建的。</p>
+<p>这个项目是由Limodou <a class="inner" href="&#x6D;a&#x69;l&#x74;&#x6F;:&#x6C;i&#x6D;o&#x64;ou@g&#x6D;ai&#x6C;&#x2E;c&#x6F;&#x6D;">&#x6C;i&#x6D;&#x6F;d&#x6F;u&#x40;gmai&#x6C;.c&#x6F;m</a>发起并创建的。</p>
 <h2 id="title_1-2">License<a class="anchor" href="#title_1-2">&para;</a></h2>
 <p>Uliweb按照BSD协议进行发布。</p>
 <h2 id="title_1-3">基础组件<a class="anchor" href="#title_1-3">&para;</a></h2>
@@ -218,10 +218,9 @@ $(function(){
 </ul>
 <h2 id="title_1-6">链接<a class="anchor" href="#title_1-6">&para;</a></h2>
 <ul>
-<li>Uliweb 项目主页 <a class="outter" href="https://github.com/limodou/uliweb">https://github.com/limodou/uliweb</a></li>
+<li>Uliweb 项目主页 <a class="outter" href="https://github.com/limodou/uliweb3">https://github.com/limodou/uliweb3</a></li>
 <li>Uliweb-doc 文档项目 <a class="outter" href="http://github.com/limodou/uliweb-doc">http://github.com/limodou/uliweb-doc</a></li>
 <li>Uliweb-doc 在线文档查看链接 <a class="outter" href="http://limodou.github.com/uliweb-doc/">http://limodou.github.com/uliweb-doc/</a></li>
-<li>plugs Uliweb apps收集项目 <a class="outter" href="https://github.com/limodou/plugs">https://github.com/limodou/plugs</a></li>
 </ul>
 
 
