--- a/zh_CN/tutorial/guestbook.html
+++ b/zh_CN/tutorial/guestbook.html
@@ -415,7 +415,7 @@ def del_comment(id):
 <li>URL映射的使用，包括：expose的使用，参数定义，与View函数的对应</li>
 <li>结构的了解，包括：Uliweb的app组织，settings.ini的简单使用，view函数与模板文件     的对应关系</li>
 </ol>
-<p>这里演示的View的处理还是基于函数的方式 ，在另一篇 <a class="inner" href="basic.html">Simple Todo (Uliweb 版本) 之 基础篇</a> 中有如何使用Class方式的View。</p>
+<p>这里演示的View的处理还是基于函数的方式 ，在另一篇 <a class="inner" href="todo_basic.html">Simple Todo (Uliweb 版本) 之 基础篇</a> 中有如何使用Class方式的View。</p>
 
 
       <div class="chapter-prev chapter-down pull-left">
