--- a/zh_CN/tutorial/hello_uliweb.html
+++ b/zh_CN/tutorial/hello_uliweb.html
@@ -130,7 +130,7 @@ $(function(){
       <h1 id="title_1">Hello, Uliweb<a class="anchor" href="#title_1">&para;</a></h1>
 <p>本教程将带你领略 Uliweb 的风采，这是一个非常简单的例子，你可以按照我的步骤来操作。我们 将生成一个空的页面，它将显示"Hello, Uliweb"信息。</p>
 <h2 id="title_1-1">准备<a class="anchor" href="#title_1-1">&para;</a></h2>
-<p>安装请看 <a class="inner" href="installation.html">安装Uliweb</a></p>
+<p>安装请看 <a class="inner" href="../installation.html">安装Uliweb</a></p>
 <h2 id="title_1-2">创建新的项目<a class="anchor" href="#title_1-2">&para;</a></h2>
 <p>在安装完毕后，Uliweb 提供一个命令行工具 uliweb, 它可以执行一些命令，它会安装在 Python/Scripts 目录下，因此要想运行它，要保证 Python/Scripts 在PATH环境变量上，这样我们就可以在命令行 下使用它了。</p>
 <p>进入你的工作目录，然后执行:</p>
