--- a/zh_CN/index.html
+++ b/zh_CN/index.html
@@ -148,7 +148,7 @@ $(function(){
 <h2 id="title_0-3">多人博客教程<a class="anchor" href="#title_0-3">&para;</a></h2>
 <div class="toc">
 <ul>
-<li><a href="blogs/introduction.html">介绍</a></li><li><a href="blogs/create_project.html">创建项目</a></li><li><a href="blogs/globle_design.html">全局设计</a></li><li><a href="blogs/blog_design.html">设计Blog表结构</a></li><li><a href="blogs/admin_layout.html">管理界面布局</a></li><li><a href="blogs/blog_add.html">添加博客</a></li></ul>
+<li><a href="blogs/introduction.html">介绍(注意此教程只针对uliweb,已无法在uliweb3下运行)</a></li><li><a href="blogs/create_project.html">创建项目</a></li><li><a href="blogs/globle_design.html">全局设计</a></li><li><a href="blogs/blog_design.html">设计Blog表结构</a></li><li><a href="blogs/admin_layout.html">管理界面布局</a></li><li><a href="blogs/blog_add.html">添加博客</a></li></ul>
 </div>
 
 <h2 id="title_0-4">视频<a class="anchor" href="#title_0-4">&para;</a></h2>
@@ -186,7 +186,7 @@ $(function(){
 <h3 id="title_0-5-4">Uliweb内置APP文档<a class="anchor" href="#title_0-5-4">&para;</a></h3>
 <div class="toc">
 <ul>
-<li><a href="app_staticfiles.html">staticfiles</a></li><li><a href="app_soap.html">soap</a></li><li><a href="app_auth.html">auth(用户认证处理)</a></li><li><a href="app_rbac.html">rbac(权限控制)</a></li><li><a href="app_template.html">template</a></li><li><a href="app_upload.html">upload(文件上传及显示处理)</a></li><li><a href="app_csrf.html">CSRF</a></li><li><a href="app_secretkey.html">secretkey(DES加解密处理)</a></li><li><a href="app/objcache.html">objcache(对象缓存)</a></li><li><a href="app/recorder.html">recorder(请求记录与回放组件)</a></li><li><a href="app/sequence.html">sequence(序号生成)</a></li><li><a href="app/celery.html">celery</a></li><li><a href="app/clean.html">clean</a></li></ul>
+<li><a href="app_staticfiles.html">staticfiles</a></li><li><a href="app_auth.html">auth(用户认证处理)</a></li><li><a href="app_rbac.html">rbac(权限控制)</a></li><li><a href="app_template.html">template</a></li><li><a href="app_upload.html">upload(文件上传及显示处理)</a></li><li><a href="app_csrf.html">CSRF</a></li><li><a href="app_secretkey.html">secretkey(DES加解密处理)</a></li><li><a href="app/recorder.html">recorder(请求记录与回放组件)</a></li><li><a href="app/sequence.html">sequence(序号生成)</a></li><li><a href="app/celery.html">celery</a></li><li><a href="app/clean.html">clean</a></li></ul>
 </div>
 
 <h3 id="title_0-5-5">Uliweb-UI<a class="anchor" href="#title_0-5-5">&para;</a></h3>
@@ -195,50 +195,44 @@ $(function(){
 <li><a href="uliweb_ui/apis.html">APIs</a></li></ul>
 </div>
 
-<h3 id="title_0-5-6">Plugs使用<a class="anchor" href="#title_0-5-6">&para;</a></h3>
-<div class="toc">
-<ul>
-<li><a href="plugs/apps.html">Plugs App 清单</a></li><li><a href="plugs/dialog2.html">如何使用dialog2打开编辑窗口</a></li><li><a href="plugs/menus.html">menus - 菜单管理</a></li></ul>
-</div>
-
-<h3 id="title_0-5-7">实用模块说明<a class="anchor" href="#title_0-5-7">&para;</a></h3>
+<h3 id="title_0-5-6">实用模块说明<a class="anchor" href="#title_0-5-6">&para;</a></h3>
 <div class="toc">
 <ul>
 <li><a href="utils/workers.html">Workers - 多进程执行</a></li><li><a href="compat.html">使用_compat.py实现py2,py3的兼容</a></li></ul>
 </div>
 
 <h2 id="title_0-6">技术分享<a class="anchor" href="#title_0-6">&para;</a></h2>
-<h3 id="title_0-6-8">前端<a class="anchor" href="#title_0-6-8">&para;</a></h3>
+<h3 id="title_0-6-7">前端<a class="anchor" href="#title_0-6-7">&para;</a></h3>
 <div class="toc">
 <ul>
 <li><a href="articles/xhr_redirect_json.html">重定向在异步请求中的处理实现</a></li><li><a href="articles/jqcookie.html">jqcookie使用说明</a></li></ul>
 </div>
 
-<h3 id="title_0-6-9">命令行<a class="anchor" href="#title_0-6-9">&para;</a></h3>
+<h3 id="title_0-6-8">命令行<a class="anchor" href="#title_0-6-8">&para;</a></h3>
 <div class="toc">
 <ul>
 <li><a href="articles/find_option.html">查找配置项的定义</a></li></ul>
 </div>
 
-<h3 id="title_0-6-10">部署<a class="anchor" href="#title_0-6-10">&para;</a></h3>
+<h3 id="title_0-6-9">部署<a class="anchor" href="#title_0-6-9">&para;</a></h3>
 <div class="toc">
 <ul>
 <li><a href="articles/svg_mimetype_config.html">svg mimetype在uliweb中的设置</a></li><li><a href="articles/tornado_support.html">Tornado的支持</a></li><li><a href="articles/gevent_support.html">在gevent及gevent-socketio上运行</a></li><li><a href="articles/nginx_cfg.html">Nginx配置例子</a></li><li><a href="articles/url_prefix.html">站点的url前缀配置例子</a></li></ul>
 </div>
 
-<h3 id="title_0-6-11">ORM<a class="anchor" href="#title_0-6-11">&para;</a></h3>
+<h3 id="title_0-6-10">ORM<a class="anchor" href="#title_0-6-10">&para;</a></h3>
 <div class="toc">
 <ul>
 <li><a href="articles/sqlite_timeout.html">uliweb里sqlite的timeout参数</a></li><li><a href="articles/multitable_query.html">Uliorm多表关联查询</a></li></ul>
 </div>
 
-<h3 id="title_0-6-12">Auth<a class="anchor" href="#title_0-6-12">&para;</a></h3>
+<h3 id="title_0-6-11">Auth<a class="anchor" href="#title_0-6-11">&para;</a></h3>
 <div class="toc">
 <ul>
 <li><a href="articles/auth_type.html">使用 auth_type 扩展认证方式</a></li></ul>
 </div>
 
-<h3 id="title_0-6-13">调试<a class="anchor" href="#title_0-6-13">&para;</a></h3>
+<h3 id="title_0-6-12">调试<a class="anchor" href="#title_0-6-12">&para;</a></h3>
 <div class="toc">
 <ul>
 <li><a href="debug_with_pycharm.html">使用PyCharm进行调试</a></li></ul>
