--- a/zh_CN/tutorial/todo_apijson.html
+++ b/zh_CN/tutorial/todo_apijson.html
@@ -130,19 +130,25 @@ $(function(){
 </div>
 
       <h1 id="title_1">Simple Todo (Uliweb 版本) 之 高级篇<a class="anchor" href="#title_1">&para;</a></h1>
-<p>本版本是从 <a class="outter" href="http://simple-is-better.com/news/detail-309">http://simple-is-better.com/news/detail-309</a> 来的，并且已经使用Uliweb 实现了一个 <a class="inner" href="tutorial/todo_basic.html">基础版本</a> ，不过 这个基础版本讲述的是最基本的Uliweb的用法，因此叫基础篇。 在这个高级篇中，我希望向大家介绍更加高级一些的内容。其中有些功能要依赖于 uliweb-ui 系列模块。</p>
+<p>本版本是从 <a class="outter" href="http://simple-is-better.com/news/detail-309">http://simple-is-better.com/news/detail-309</a> 来的，并且已经使用Uliweb 实现了一个 <a class="inner" href="todo_basic.html">基础版本</a> ，不过这个基础版本讲述的是最基本的Uliweb的用法，因此叫基础篇。 在这个高级篇中，我希望向大家介绍更加高级一些的内容。其中有些功能要依赖于 uliweb-ui 系列模块。</p>
 <h2 id="title_1-1">uliweb-ui 系列模块介绍<a class="anchor" href="#title_1-1">&para;</a></h2>
-<p>因为uliweb原有的app集合项目plugs有支持的css框架过老,有点臃肿,所以uliweb3选择不兼容plugs,所以这里介绍后来发展的uliweb-ui系列模块的配合开发</p>
+<p>因为uliweb原有的app集合项目plugs有支持的css框架过老,比较臃肿,所以uliweb3选择不兼容plugs,所以这里介绍后来发展的uliweb-ui系列模块的配合开发</p>
 <ol>
 <li><a class="outter" href="https://github.com/uliwebext/uliweb-ui">uliweb-ui</a> : 为uliweb加上常用的前端模块支持如jquery插件,select2,vuejs等等</li>
-<li><a class="outter" href="https://github.com/uliwebext/uliweb-layout">uliweb-layout</a> : 为uliweb加上常用的页面布局的支持,基于[AdminLTE](https://adminlte.io/)</li>
+<li><a class="outter" href="https://github.com/uliwebext/uliweb-layout">uliweb-layout</a> : 为uliweb加上常用的页面布局的支持,基于 <a class="outter" href="https://adminlte.io/">AdminLTE</a></li>
 <li><a class="outter" href="https://github.com/uliwebext/uliweb-menu">uliweb-menu</a> : 为uliweb加上菜单功能</li>
 <li><a class="outter" href="https://github.com/limodou/uliweb-apps">uliweb-apps</a> : uliweb功能类app集合</li>
 <li><a class="outter" href="https://github.com/zhangchunlin/uliweb-comui">uliweb-comui</a> : 类似于uliweb-ui (zhangchunlin维护)</li>
 <li><a class="outter" href="https://github.com/zhangchunlin/uliweb-apijson">uliweb-apijson</a> : apijson的uliweb实现,加上通用的数据库后端api</li>
 </ol>
-<p>这些模块可以参考requirements.txt手动安装,也可以直接使用`pip install -r requirements.txt <code>安装   ## 构建流程   ### 构建初始环境  在基础篇中讲过的内容，这里不再缀述。假定目前初始为$project，操作如下:</code><code>uliweb makeproject apijson_todo cd apijson_todo uliweb makeapp todo `</code></p>
-<h2 id="title_1-2">settings.ini配置<a class="anchor" href="#title_1-2">&para;</a></h2>
+<p>这些模块可以参考requirements.txt手动安装,也可以直接使用 <code>pip install -r requirements.txt</code>安装</p>
+<h2 id="title_1-2">构建流程<a class="anchor" href="#title_1-2">&para;</a></h2>
+<h3 id="title_1-2-1">构建初始环境<a class="anchor" href="#title_1-2-1">&para;</a></h3>
+<p>在基础篇中讲过的内容，这里不再赘述。假定目前初始为$project，操作如下:</p>
+<pre class="prettyprint "><code>uliweb makeproject apijson_todo
+cd apijson_todo
+uliweb makeapp todo</code></pre>
+<h2 id="title_1-3">settings.ini配置<a class="anchor" href="#title_1-3">&para;</a></h2>
 <p>修改apps/settings.ini为以下内容:</p>
 <pre class="prettyprint "><code>[GLOBAL]
 DEBUG = False
@@ -156,8 +162,8 @@ INSTALLED_APPS = [
     'uliweb_apijson.apijson',
     'todo',
 ]</code></pre>
-<h2 id="title_1-3">基本布局<a class="anchor" href="#title_1-3">&para;</a></h2>
-<p>前面我们看到，已经加入了几个app，其中 <code>uliweb_apijson.apijson</code>提供了通用的Model的CRUD(Create Read Update Delete)的后端api接口,再经过简单settings配置以后就可以提供给前端页面里用javascript直接调用了。</p>
+<h2 id="title_1-4">基本布局<a class="anchor" href="#title_1-4">&para;</a></h2>
+<p>前面我们看到，已经加入了几个app，其中 <code>uliweb_apijson.apijson</code> 提供了通用的Model的CRUD(Create Read Update Delete)的后端api接口,再经过简单settings配置以后就可以提供给前端页面里用javascript直接调用了。</p>
 <p>而 <code>uliweb_apps.site</code>会引入依赖的 <code>uliweb_layout.layout</code> 以提供了基本的布局。在layout中的settings.ini中有几个参数可以设置</p>
 <p>我们可以修改一部分，添加到apps/settings.ini中去:</p>
 <pre class="prettyprint "><code>[LAYOUT]
@@ -188,7 +194,7 @@ MAINMENU &lt;= {
 <p>如果没有错误，可以通过访问 <a class="outter" href="http://localhost:8000">http://localhost:8000</a> 看到如下界面:</p>
 <p><img alt="image" src="../_static/apijson_todo_01.png"/>
 </p>
-<h2 id="title_1-4">创建Todo的Model<a class="anchor" href="#title_1-4">&para;</a></h2>
+<h2 id="title_1-5">创建Todo的Model<a class="anchor" href="#title_1-5">&para;</a></h2>
 <p>下面就是创建Todo表的结构。在todo下创建models.py文件，写入以下内容:</p>
 <pre class="prettyprint "><code>#coding=utf-8
 from uliweb.orm import *
@@ -204,8 +210,8 @@ todo = 'todo.models.Todo'</code></pre>
 <p>在命令行下运行:</p>
 <pre class="prettyprint "><code>uliweb syncdb</code></pre>
 <p>来创建表。</p>
-<h2 id="title_1-5">处理Todo<a class="anchor" href="#title_1-5">&para;</a></h2>
-<p>之前在settings中加入了<code>uliweb_apijson.apijson</code>,为了让Todo这个model能被前端使用apijson的接口访问,还需在settings里增加一些配置,例子如下,主要是将Todo的CRUD接口让未登入访问(UNKNOWN)就能操作,对uliweb-apijson做进一步了解可以访问[github上的项目](https://github.com/zhangchunlin/uliweb-apijson)</p>
+<h2 id="title_1-6">处理Todo<a class="anchor" href="#title_1-6">&para;</a></h2>
+<p>之前在settings中加入了<code>uliweb_apijson.apijson</code>,为了让Todo这个model能被前端使用apijson的接口访问,还需在settings里增加一些配置,例子如下,主要是将Todo的CRUD接口让未登入访问(UNKNOWN)就能操作,对uliweb-apijson做进一步了解可以访问 <a class="outter" href="https://github.com/zhangchunlin/uliweb-apijson">github上的项目</a></p>
 <pre class="prettyprint "><code>[APIJSON_MODELS]
 todo = {
     "GET" : { "roles" : ["UNKNOWN"] },
